# renderer-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
assets/: README.md
assets/models/a_contortionist_dancer/: license.txt  scene.gltf
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logging.rs  timer.rs
crates/platform/: Cargo.toml
crates/platform/src/: input.rs  lib.rs  window.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: depth_buffer.rs  frame.rs  frame_manager.rs  lib.rs  renderer.rs  ubo.rs
crates/resources/: Cargo.toml
crates/resources/src/: error.rs  lib.rs  material.rs  model.rs  ubo.rs
crates/resources/tests/: integration_test.rs
crates/rhi/: Cargo.toml
crates/rhi/src/: buffer.rs  command.rs  descriptor.rs  device.rs  error.rs  image.rs  instance.rs  lib.rs  physical_device.rs  pipeline.rs  rendering.rs  sampler.rs  shader.rs  swapchain.rs  sync.rs  texture.rs  vertex.rs
crates/scene/: Cargo.toml
crates/scene/src/: camera.rs  lib.rs  light.rs  transform.rs
shaders/hlsl/: common.hlsli  lights.hlsli  pbr.hlsli  shadow.hlsli  shadow_csm.hlsli
shaders/hlsl/compute/: brdf_lut.hlsl  equirect_to_cubemap.hlsl  irradiance_map.hlsl  prefilter_map.hlsl
shaders/hlsl/pixel/: model.hlsl  model_full.hlsl  model_pbr.hlsl  model_pbr_ibl.hlsl  model_pbr_ibl_csm.hlsl  shadow.hlsl  skybox.hlsl  triangle.hlsl
shaders/hlsl/vertex/: model.hlsl  shadow.hlsl  skybox.hlsl  triangle.hlsl
shaders/spirv/: model.frag.spv  model.vert.spv
