[package]
name = "renderer-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Main rendering pipeline for the Vulkan renderer"

[dependencies]
renderer-core = { workspace = true }
renderer-platform = { workspace = true }
renderer-rhi = { workspace = true }
renderer-resources = { workspace = true }
renderer-scene = { workspace = true }
ash = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
