[package]
name = "renderer-resources"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Resource loading and management for the renderer"

[dependencies]
renderer-core = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
