[package]
name = "renderer-rhi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulkan abstraction layer (RHI) for the renderer"

[dependencies]
renderer-core = { workspace = true }
renderer-platform = { workspace = true }
ash = { workspace = true }
ash-window = { workspace = true }
gpu-allocator = { workspace = true }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
